Fri Dec  7 10:22:25 2001  Ossama Othman  <ossama@uci.edu>

	* ace/SSL/SSL_SOCK_Stream.i (close):

	  Do not invalidate the handle when closing the
	  ACE_SSL_SOCK_Stream.  Doing so causes subtle side-effects when a
	  reactor invokes an event handler that uses a shutdown
	  ACE_SSL_SOCK_Stream.  For example, if an SSL handshake fails
	  then the stream andle will be invalidated.  This prevents the
	  ACE_SSL_Accept_Handler from being removed from the reactor.
	  Later when handle_events() is called the reactor will attempt
	  to call the ACE_SSL_Accept_Handler with the shutdown
	  ACE_SSL_SOCK_Stream, which appears to cause an access violation
	  on Windows, and a "hang" on Unix platforms.  Thanks to Vladimir
	  Chovanec <Vladimir.CHOVANEC@asset.sk> for tracking down this
	  problem.

Thu Dec 06 20:28:02 2001  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/SString.cpp (ACE_NS_WString): Char string constructor only
	  initialized the buffer length but not the string length.  This
	  was causing string comparisons to fail.

Thu Dec  6 18:51:39 2001  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/platform_sunos5_sunc++.GNU: Re this change:
          Wed Dec  5 12:37:56 2001  Carlos O'Ryan  <coryan@uci.edu>
          more than the Orbix stuff was removed... restored the setting
          of required link libraries and handling for the distrib option.

Thu Dec 06 14:06:22 2001  Nanbor Wang  <nanbor@cs.wustl.edu>

	* tests/Config_Test.cpp: The string literals used to initialize
	  ACE_TString need to be enclosed in an ACE_TEXT macro.

	* ace/Registry_Name_Space.h:
	* ace/Registry_Name_Space.cpp: Changed ACE_WString to
	  ACE_NS_WString.  I missed these last time.

	* ace/SString.i: Added an ACE_NS_WString constructor that I
	  missed.

Thu Dec  6 11:19:18 2001  Venkita Subramonian  <venkita@cs.wustl.edu>

	* performance-tests/Server_Concurrency/Queue_Based_Workers/RT_CORBA_Workers.h: